--- a/iOS/wccalendar/wccalendar/Base.lproj/Main.storyboard
+++ b/iOS/wccalendar/wccalendar/Base.lproj/Main.storyboard
@@ -13,20 +13,25 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="jmY-GL-8RW">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 <connections>
                                     <outlet property="dataSource" destination="vXZ-lx-hvc" id="chd-bN-XAi"/>
                                     <outlet property="delegate" destination="vXZ-lx-hvc" id="BJW-Iq-N1B"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" id="ChW-Zr-sTn" customClass="CommonHeaderView">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.48444046829999998" green="0.72402262620000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" id="580-gW-ljG"/>
                     <connections>
+                        <outlet property="headerView" destination="ChW-Zr-sTn" id="Uo3-AC-Luk"/>
                         <outlet property="tableView" destination="jmY-GL-8RW" id="Gny-QH-W3t"/>
                     </connections>
                 </viewController>
